# intel-rrk-safety

./: README.md  _config.yml
sample/: CMakeLists.txt
sample/include/: json.h  ppe.h
sample/src/: main.cpp  ppe.cpp
samples/c++/: CMakeLists.txt
samples/c++/cmake/: FindPoco.cmake
samples/c++/src/: json.cpp
samples/python/: sample.py
